New Mandala template implemented

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -2147,6 +2147,137 @@
           "pdp_cta_text1": "",
           "pdp_cta_link1": ""
         }
+      },
+      "product-quezzle-new-template": {
+        "type": "product-quezzle-new-template",
+        "settings": {
+          "buy_it_now_action": "direct_to_cart",
+          "video_first_title": "Compile colorful jigsaw puzzle of a thousand of pieces",
+          "video_first_text": "Dragons, gas ballons and animals-like figurines piece by piece add up to Cappadocia illustration",
+          "video_first_image": "shopify:\/\/shop_images\/product-video-img1.png",
+          "video_second_title": "Look and find out secrets",
+          "video_second_text": "Quezzle is an illustration with detailed drawing, hundreds of stories and characters.",
+          "video_second_image": "shopify:\/\/shop_images\/product-video-img2.png",
+          "video_third_title": "Get through quests and save the Princess",
+          "video_third_text": "The Elephant, Pegasus, the Eagle and the Lion 3D-figurines come to help — Unidragon Prince`s friends are waiting for you in each Quezzle part",
+          "video_third_image": "shopify:\/\/shop_images\/man1.png",
+          "video_third_image2": "shopify:\/\/shop_images\/video_thumb3.png",
+          "video_meet": "Meet Quezzle",
+          "video_meet_img": "shopify:\/\/shop_images\/video_thumb_main.png",
+          "quest_title": "Compile the puzzle, get through the quest",
+          "quest_first_image": "shopify:\/\/shop_images\/unique-pices.png",
+          "quest_first_title": "1000 unique pieces. More interesting than a usual jigsaw puzzle!",
+          "quest_second_image": "shopify:\/\/shop_images\/main-quest.png",
+          "quest_second_title": "One main quest. 4 parts. 50 tasks.",
+          "quest_third_image": "shopify:\/\/shop_images\/colorfull-img.png",
+          "quest_third_title": "Colorful image with a detailed drawing",
+          "quest_fourth_image": "shopify:\/\/shop_images\/mini-figurines-img.png",
+          "quest_fourth_title": "6 secret puzzles and 4 mini-figurines",
+          "quest_fifth_image": "shopify:\/\/shop_images\/game-time-img.png",
+          "quest_fifth_title": "8+ hours of a game time",
+          "quest_sixth_image": "shopify:\/\/shop_images\/wooden-rack.png",
+          "quest_sixth_title": "Collectors wooden box for your collection",
+          "order_title": "Order Quezzle now",
+          "order_first_img": "shopify:\/\/shop_images\/products-product-1_2x_200x_2ee2edac-5ba7-4452-bbf9-91c76a12a4b4.png",
+          "order_part_first": "Part 1 of 4",
+          "order_second_img": "shopify:\/\/shop_images\/products-product-2_2x_200x_d51fe75b-2805-4914-99d0-79997ab68881.png",
+          "order_part_second": "Parts 2, 3 and 4",
+          "order_buy": "Buy",
+          "order_set_img": "shopify:\/\/shop_images\/products-product-3_2x_200x_829e1f9a-fdde-4f92-93ee-f0bba0853c54.png",
+          "order_set_title": "Сomplete set",
+          "order_set_text": "All of 4 parts together open the story line — 12-step quest",
+          "feature_first_img": "shopify:\/\/shop_images\/checkquzzel_medium_52bddc3b-c8e2-4ccd-aec4-c21d38529352.png",
+          "feature_first_title": "Please check Quezzle basic mechanics",
+          "feature_first_text": "It's so easy to let your eyes linger at the illustration, but it's high time to do the puzzle",
+          "feature_second_img": "shopify:\/\/shop_images\/compile3d1_medium_3fa6671e-1a93-40a7-9f22-aa6b6d0d04de.png",
+          "feature_second_title": "Compile <br> 3D-figurines",
+          "feature_second_text": "Having extra details left? They are Unidragon's friends",
+          "feature_third_img": "shopify:\/\/shop_images\/compile3d2_medium_408ed5c4-2c4b-4c25-b7a3-5045592528d9.png",
+          "feature_third_title": "Compile <br> 3D-figurines",
+          "feature_third_text": "Don't get lost in Quezzle story-lines!",
+          "feature_fourth_title": "Explore <br> Cappadocia world",
+          "feature_fourth_text": "Take an imaginary walk along the side-streets and fly below the clouds on gas balloons",
+          "feature_fifth_title": "Lose yourself in going through the main quest",
+          "feature_fifth_text": "Go through mazes and complete additional tasks",
+          "catchy_first_title": "Not just a puzzle but a beautiful illustration and a quest game",
+          "catchy_first_text": "One product — three ways of entertainment. Compile a bright thousand pieces jigsaw puzzle. Look at pieces and find out secrets. Go through quests and mazes.",
+          "catchy_first_img": "shopify:\/\/shop_images\/surprise-img_medium_e8ffb67e-a06d-4dcc-abd8-9184da589dc5.jpg",
+          "catchy_first_img_desc": "Surprise everybody and let them gather round you at the party",
+          "catchy_second_title": "Puzzle + Quest = Quezzle",
+          "catchy_second_text": "A pleasure to look at an illustration with hundreds of plots and characters. There are mummies, ninjas, dinosaurs and even the authors of Quezzle from Unidragon and IC4Design lurking on it!",
+          "catchy_second_img": "shopify:\/\/shop_images\/unforgeabegift_medium_6bac2a66-f2b6-446a-97c6-2475e4bc2759.jpg",
+          "catchy_second_img_desc": "Unforgettable gift for the New Year and Christmas",
+          "catchy_third_title": "Quezzle is a bright catchy gift",
+          "catchy_third_text": "In a picture-rich picture, you will need to find encrypted messages in the form of details, objects and words.",
+          "catchy_third_img": "shopify:\/\/shop_images\/good-play-img_medium_984f3915-9b49-4f02-a579-a2eb48f0e37b.jpg",
+          "catchy_third_img_desc": "Good to play together with kids",
+          "catchy_fourth_title": "Quezzle is a 4-part quest in which you have to rescue a princess from a villain",
+          "catchy_fourth_text": "The story will be complemented by 40 side quests and 10 labyrinths. Complete them and help the Prince and the people of Cappadocia!",
+          "catchy_fourth_img": "shopify:\/\/shop_images\/surprise-img2_medium_cfafbb80-b185-4ad9-b2eb-40cc6bddfa99.png",
+          "catchy_fourth_img_desc": "A reason to gather all the family together",
+          "gadgets_first_title": "Take your mind of gadgets' screens",
+          "gadgets_first_text": "Let your eyes have a rest. Your smartphone should be waiting.",
+          "gadgets_first_img": "shopify:\/\/shop_images\/gaget-screen1_medium_5ea58190-1719-44b8-955c-719450ef88a4.png",
+          "gadgets_second_title": "Have a playful time",
+          "gadgets_second_text": "Get new impressions and charge of positive emotions",
+          "gadgets_second_img": "shopify:\/\/shop_images\/releaf-store_medium_d4353ecb-e452-4b3f-af8d-624e3d1a1ba8.png",
+          "gadgets_third_title": "Have a happy time with your family",
+          "gadgets_third_text": "Quezzle is fascinating for the whole family anf friends! Compile the puzzle and go through the quest together!",
+          "gadgets_third_img": "shopify:\/\/shop_images\/chanange-yourself_medium_9f6315fd-39b3-46fc-a1f9-cc37d57db837.png",
+          "gadgets_fourth_title": "Relieve the stress and relax",
+          "gadgets_fourth_text": "Quezzle will take you off your daily routine",
+          "gadgets_fourth_img": "shopify:\/\/shop_images\/play-full_medium_2aa6fd36-610f-4c9b-99e7-40956a6a191f.jpg",
+          "gadgets_fifth_title": "Challenge yourself",
+          "gadgets_fifth_text": "You should do your best to compile Quezzle and go through the quest — not everyone can handle it!",
+          "gadgets_fifth_img": "shopify:\/\/shop_images\/happy-time_medium_99041aa2-ef24-4f6d-b42f-53976c832946.png",
+          "gadgets_sixth_title": "Develop motor skills",
+          "gadgets_sixth_text": "And not only motor skills: neurologists consider puzzles to be an excellent way to make your brain work better",
+          "gadgets_sixth_img": "shopify:\/\/shop_images\/moter-skils_medium_032f464b-0d3c-4100-84fc-da296a3c4b0b.png",
+          "last_title": "One last step left",
+          "last_text": "Start learning Cappadocia world right now together with Quezzle!",
+          "last_desc": "Just go choose your own puzzles set and a fascinating journey is already waiting for you!",
+          "show_cart_drawer": false,
+          "show_saved_amount": true,
+          "enable_default_variant": false,
+          "show_quantity_selector": false,
+          "show_vendor": false,
+          "enable_zoom": true,
+          "shake_effect_enable": true,
+          "readmore_enable": false,
+          "enable_progressbar_text": false,
+          "enable_timer_top_message": false,
+          "enable_progressbartimer_text": false,
+          "enable_shipping": false,
+          "show_tags": false,
+          "show_social": false,
+          "enable_timer_stg_on": "enable_timer_stg_off",
+          "enable_payment_button": true,
+          "variant_swacth": "two",
+          "swatch_option": "without_background",
+          "color_style": "round_shape",
+          "product_review": true,
+          "visitor_counter_enable": false,
+          "visitor_counter_number": "1-15",
+          "delivery_time_number": "1-3",
+          "product_description": "under_the_price",
+          "enable_sticky": false,
+          "enable_combo_upsell": false,
+          "combo_upsell_product": "",
+          "enable_mobile_atc_button": false,
+          "move_badges_under_cart": false,
+          "enable_trust_badges": false,
+          "pdp_title": "",
+          "pdp_sub_title": "",
+          "heading-tax": "",
+          "tax_title": "",
+          "tax_sub_content": "",
+          "title": "",
+          "sub_title": "",
+          "pdp_cta_text": "",
+          "pdp_cta_link": "",
+          "pdp_cta_text1": "",
+          "pdp_cta_link1": ""
+        }
       }
     },
     "content_for_index": [
