--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -245,6 +245,8 @@
         "type": "header",
         "settings": {
           "remove_space": true,
+          "enable_top_announcement": true,
+          "top_announcement_text": "<span style=\"font-size: 18px;text-transform: uppercase;\">Hurry up!<\/span> <span style=\"font-size: 18px;\">Special Christmas sale.<\/span> <span style=\"color: white;font-size: 20px;\">UP TO 50% OFF DEALS<\/span>",
           "align_logo": "left",
           "logo": "shopify:\/\/shop_images\/Logo-unidragon.png",
           "desktop_logo_size": "90%",
@@ -395,9 +397,9 @@
           "enable_mobile_atc_button": true,
           "move_badges_under_cart": false,
           "enable_trust_badges": false,
-          "pdp_enable": false,
+          "pdp_enable": true,
           "pdp_enable_banner": true,
-          "pdp_image_banner": "shopify:\/\/shop_images\/new_banner_10.jpg",
+          "pdp_image_banner": "shopify:\/\/shop_images\/211201_-_christmas_gift_1.jpg",
           "pdp_image": "shopify:\/\/shop_images\/new_img_a79e2b7e-362a-4eb1-85d0-a79a3dbc6454.jpg",
           "pdp_title": "<b>Buy any 3 Jigsaw Puzzles and<\/b> <br><span class=\"other_infos\">Get 10% Discount<\/span>",
           "pdp_sub_title": "The discount will be applied automatically in the cart.",
@@ -455,6 +457,7 @@
           "enable_external_video": true,
           "external_video": "https:\/\/www.youtube.com\/watch?v=mzG65WGcKJE",
           "video_bg": "",
+          "mob_video_bg": "\/\/cdn.shopify.com\/s\/files\/1\/0291\/1322\/1168\/files\/480v3.mp4?v=1637501838",
           "show_vendor": false,
           "sort_enable": false,
           "tags_enable": true,
@@ -628,6 +631,7 @@
         "settings": {
           "enable_video": true,
           "video_bg": "https:\/\/cdn.shopify.com\/s\/files\/1\/0291\/1322\/1168\/files\/1980v23_c.mp4?v=1637501455",
+          "mob_video_bg": "\/\/cdn.shopify.com\/s\/files\/1\/0291\/1322\/1168\/files\/480v3.mp4?v=1637501838",
           "enable_external_video": false,
           "external_video": "https:\/\/youtu.be\/iH4yWWTm8MU",
           "image": "shopify:\/\/shop_images\/unidragon-wooden-jigsaw-puzzle-1.jpg",
@@ -1259,6 +1263,9 @@
           "sticky_button": "show_timer",
           "move_badges_under_cart": true,
           "enable_trust_badges": false,
+          "pdp_enable": true,
+          "pdp_enable_banner": true,
+          "pdp_image_banner": "shopify:\/\/shop_images\/211201_-_christmas_gift_1.jpg",
           "pdp_image": "shopify:\/\/shop_images\/new_img_a79e2b7e-362a-4eb1-85d0-a79a3dbc6454.jpg",
           "pdp_title": "<b>Buy any 3 Jigsaw Puzzles and<\/b> <br><span class=\"other_infos\">Get 10% Discount<\/span>",
           "pdp_sub_title": "The discount will be applied automatically in the cart.",
@@ -1443,6 +1450,9 @@
           "enable_mobile_atc_button": true,
           "move_badges_under_cart": false,
           "enable_trust_badges": false,
+          "pdp_enable": true,
+          "pdp_enable_banner": true,
+          "pdp_image_banner": "shopify:\/\/shop_images\/211201_-_christmas_gift_1.jpg",
           "pdp_image": "shopify:\/\/shop_images\/new_img1.jpg",
           "pdp_title": "<b>Buy any 3 Jigsaw Puzzles and<\/b> <br><span class=\"other_infos\">Get 10% Discount<\/span>",
           "pdp_sub_title": "The discount will be applied automatically in the cart.",
@@ -1919,7 +1929,7 @@
           "enable_trust_badges": false,
           "pdp_enable": false,
           "pdp_enable_banner": true,
-          "pdp_image_banner": "shopify:\/\/shop_images\/new_banner_10.jpg",
+          "pdp_image_banner": "shopify:\/\/shop_images\/211201_-_christmas_gift_1.jpg",
           "pdp_title": "",
           "pdp_sub_title": "",
           "heading-tax": "",
@@ -1961,12 +1971,13 @@
           "show_collection_image": true,
           "enable_parallax": false,
           "enable_full_banner": true,
-          "img": "shopify:\/\/shop_images\/211122_-_black_friday__1.jpg",
+          "img": "shopify:\/\/shop_images\/211201_-_christmas_gift_1.jpg",
           "img_width": "715px",
           "enable_video": true,
           "enable_external_video": false,
           "external_video": "",
           "video_bg": "https:\/\/cdn.shopify.com\/s\/files\/1\/0291\/1322\/1168\/files\/1980v23_c.mp4?v=1637501455",
+          "mob_video_bg": "\/\/cdn.shopify.com\/s\/files\/1\/0291\/1322\/1168\/files\/480v3.mp4?v=1637501838",
           "show_vendor": false,
           "sort_enable": false,
           "tags_enable": true,
@@ -1984,7 +1995,7 @@
           "show_collection_image": true,
           "enable_parallax": false,
           "enable_full_banner": true,
-          "img": "shopify:\/\/shop_images\/211122_-_black_friday-03.jpg",
+          "img": "shopify:\/\/shop_images\/211201_-_christmas_gift_1.jpg",
           "img_width": "715px",
           "enable_video": true,
           "enable_external_video": false,
@@ -2003,7 +2014,7 @@
         "type": "image-banner",
         "settings": {
           "enable_full_banner": true,
-          "img": "shopify:\/\/shop_images\/211122_-_black_friday__1.jpg",
+          "img": "shopify:\/\/shop_images\/211201_-_christmas_gift_1.jpg",
           "img_width": "715px"
         }
       },
@@ -2111,21 +2122,13 @@
           "enable_zoom": true,
           "shake_effect_enable": true,
           "readmore_enable": false,
-          "enable_progressbar_text": false,
-          "enable_timer_top_message": false,
-          "enable_progressbartimer_text": false,
           "enable_shipping": false,
           "show_tags": false,
           "show_social": false,
-          "enable_timer_stg_on": "enable_timer_stg_off",
           "enable_payment_button": true,
-          "variant_swacth": "two",
-          "swatch_option": "without_background",
-          "color_style": "round_shape",
           "product_review": true,
           "visitor_counter_enable": false,
           "visitor_counter_number": "1-15",
-          "delivery_time_number": "1-3",
           "product_description": "under_the_price",
           "enable_sticky": false,
           "enable_combo_upsell": false,
@@ -2133,19 +2136,14 @@
           "enable_mobile_atc_button": false,
           "move_badges_under_cart": false,
           "enable_trust_badges": false,
-          "pdp_enable": false,
-          "pdp_enable_banner": false,
+          "pdp_enable": true,
+          "pdp_enable_banner": true,
+          "pdp_image_banner": "shopify:\/\/shop_images\/211201_-_christmas_gift_1.jpg",
           "pdp_title": "",
           "pdp_sub_title": "",
           "heading-tax": "",
           "tax_title": "",
-          "tax_sub_content": "",
-          "title": "",
-          "sub_title": "",
-          "pdp_cta_text": "",
-          "pdp_cta_link": "",
-          "pdp_cta_text1": "",
-          "pdp_cta_link1": ""
+          "tax_sub_content": ""
         }
       },
       "product-quezzle-new-template": {
