--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -167,6 +167,7 @@
     "social_snapchat_link": "",
     "social_youtube_link": "",
     "social_vimeo_link": "",
+    "display_3pazl_discount": true,
     "checkout_header_image": "",
     "checkout_logo_image": "",
     "checkout_logo_position": "left",
@@ -2275,6 +2276,62 @@
           "pdp_cta_link": "",
           "pdp_cta_text1": "",
           "pdp_cta_link1": ""
+        }
+      },
+      "product-template-mandala-new-1": {
+        "type": "product-template-mandala-new-1",
+        "settings": {
+          "buy_it_now_action": "direct_to_cart",
+          "mandala_banner": "shopify:\/\/shop_images\/banner_5-mandala.jpg",
+          "mandala_title": "Emotional and rational, the Sun and the Moon, heaven and earth, light and darkness come together",
+          "mandala_icon": "shopify:\/\/shop_images\/text_icon_3-mandala1.png",
+          "mandala_set_bg": "shopify:\/\/shop_images\/mandala-set-bg_0415d5a6-c4f6-4059-a3ad-e8e7c9075ab2.png",
+          "mandala_set_icon": "shopify:\/\/shop_images\/text_icon_2_794ee111-adac-48e9-aefe-f41b1c9a14dd.png",
+          "mandala_set_title": "Royal Size puzzle is completed with Mandala-like spinner",
+          "mandala_set_text": "Looks like a kaleidoscope when viewed through the skylight",
+          "mandala_box_bg": "shopify:\/\/shop_images\/banner_302_e14f8809-6045-4a75-aa69-9917ff7c62da.png",
+          "mandala_box_title": "Immediately gift wrapped. A gift that will surprise and be remembered",
+          "mandala_feature_bg": "shopify:\/\/shop_images\/1200_1200.png",
+          "mandala_feature_title": "Yin and Yang philosophy incarnation",
+          "mandala_feature_text": "Mandala's dark half consists of angulated pieces resembling mechanism parts. The light one is compiled of elements having smooth lines and flowery motives.",
+          "mandala_figure_first_bg": "shopify:\/\/shop_images\/unidragon-wooden-puzzle-jigsaw-puzzle-for-adult-OverarchingOpposites-ks-01.jpg",
+          "mandala_figure_first_icon": "shopify:\/\/shop_images\/text_icon_100_5acd114e-eb54-4aee-89d5-35b007abd76d.png",
+          "mandala_figure_first_title": "An instrument to obtain inner balance through two outbreaks combination",
+          "mandala_figure_second_bg": "shopify:\/\/shop_images\/unidragon-wooden-puzzle-jigsaw-puzzle-for-adult-Mandala-Overarching-Opposites-ks-40001_af674eed-b713-453b-bb01-378a76933a03.png",
+          "mandala_figure_second_title": "Reason for reflection and thoughts",
+          "mandala_bottom_bg": "shopify:\/\/shop_images\/unidragon-wooden-puzzle-jigsaw-puzzle-for-adult-mandala-overarching-opposites-ks-02_7987e9d2-25fa-4e8c-95bc-4297de21e11b.jpg",
+          "mandala_bottom_image": "shopify:\/\/shop_images\/unidragon-wooden-puzzle-jigsaw-puzzle-for-adult-Mandala-Overarching-Opposites-ks-5801.png",
+          "mandala_bottom_icon": "shopify:\/\/shop_images\/text_icon_105_716ee7d2-95c0-40fc-9a04-24410cda1124.png",
+          "mandala_bottom_title": "The peculiarity is a possibility of each of the halves' circles — they are interchangeable",
+          "show_cart_drawer": false,
+          "show_saved_amount": true,
+          "enable_default_variant": false,
+          "show_quantity_selector": false,
+          "show_vendor": false,
+          "enable_zoom": true,
+          "shake_effect_enable": true,
+          "readmore_enable": false,
+          "enable_shipping": false,
+          "show_tags": false,
+          "show_social": false,
+          "enable_payment_button": true,
+          "product_review": true,
+          "visitor_counter_enable": false,
+          "visitor_counter_number": "1-15",
+          "product_description": "under_the_price",
+          "enable_sticky": true,
+          "enable_combo_upsell": false,
+          "combo_upsell_product": "",
+          "enable_mobile_atc_button": false,
+          "move_badges_under_cart": false,
+          "enable_trust_badges": false,
+          "pdp_enable": false,
+          "pdp_enable_banner": false,
+          "pdp_title": "",
+          "pdp_sub_title": "",
+          "heading-tax": "",
+          "tax_title": "",
+          "tax_sub_content": ""
         }
       }
     },
