--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -2284,25 +2284,37 @@
           "buy_it_now_action": "direct_to_cart",
           "mandala_banner": "shopify:\/\/shop_images\/banner_5-mandala.jpg",
           "mandala_title": "Emotional and rational, the Sun and the Moon, heaven and earth, light and darkness come together",
+          "mandala_title_fontsize": "18px",
+          "mandala_title_fontsize_mob": "18px",
           "mandala_icon": "shopify:\/\/shop_images\/text_icon_3-mandala1.png",
           "mandala_set_bg": "shopify:\/\/shop_images\/mandala-set-bg_0415d5a6-c4f6-4059-a3ad-e8e7c9075ab2.png",
           "mandala_set_icon": "shopify:\/\/shop_images\/text_icon_2_794ee111-adac-48e9-aefe-f41b1c9a14dd.png",
-          "mandala_set_title": "Royal Size puzzle is completed with Mandala-like spinner",
+          "mandala_set_title": "Royal Size is completed with spinner",
+          "mandala_set_title_fontsize": "18px",
+          "mandala_set_title_fontsize_mob": "16px",
           "mandala_set_text": "Looks like a kaleidoscope when viewed through the skylight",
           "mandala_box_bg": "shopify:\/\/shop_images\/banner_302_e14f8809-6045-4a75-aa69-9917ff7c62da.png",
           "mandala_box_title": "Immediately gift wrapped. A gift that will surprise and be remembered",
+          "mandala_box_title_fontsize": "18px",
+          "mandala_box_title_fontsize_mob": "16px",
           "mandala_feature_bg": "shopify:\/\/shop_images\/1200_1200.png",
           "mandala_feature_title": "Yin and Yang philosophy incarnation",
+          "mandala_feature_title_fontsize": "20px",
+          "mandala_feature_title_fontsize_mob": "16px",
           "mandala_feature_text": "Mandala's dark half consists of angulated pieces resembling mechanism parts. The light one is compiled of elements having smooth lines and flowery motives.",
           "mandala_figure_first_bg": "shopify:\/\/shop_images\/unidragon-wooden-puzzle-jigsaw-puzzle-for-adult-OverarchingOpposites-ks-01.jpg",
           "mandala_figure_first_icon": "shopify:\/\/shop_images\/text_icon_100_5acd114e-eb54-4aee-89d5-35b007abd76d.png",
           "mandala_figure_first_title": "An instrument to obtain inner balance through two outbreaks combination",
+          "mandala_figure_first_title_fontsize": "14px",
+          "mandala_figure_first_title_fontsize_mob": "14px",
           "mandala_figure_second_bg": "shopify:\/\/shop_images\/unidragon-wooden-puzzle-jigsaw-puzzle-for-adult-Mandala-Overarching-Opposites-ks-40001_af674eed-b713-453b-bb01-378a76933a03.png",
           "mandala_figure_second_title": "Reason for reflection and thoughts",
           "mandala_bottom_bg": "shopify:\/\/shop_images\/unidragon-wooden-puzzle-jigsaw-puzzle-for-adult-mandala-overarching-opposites-ks-02_7987e9d2-25fa-4e8c-95bc-4297de21e11b.jpg",
           "mandala_bottom_image": "shopify:\/\/shop_images\/unidragon-wooden-puzzle-jigsaw-puzzle-for-adult-Mandala-Overarching-Opposites-ks-5801.png",
           "mandala_bottom_icon": "shopify:\/\/shop_images\/text_icon_105_716ee7d2-95c0-40fc-9a04-24410cda1124.png",
           "mandala_bottom_title": "The peculiarity is a possibility of each of the halves' circles — they are interchangeable",
+          "mandala_bottom_title_fontsize": "14px",
+          "mandala_bottom_title_fontsize_mob": "14px",
           "show_cart_drawer": false,
           "show_saved_amount": true,
           "enable_default_variant": false,
@@ -2333,6 +2345,178 @@
           "heading-tax": "",
           "tax_title": "",
           "tax_sub_content": ""
+        }
+      },
+      "product-template-tyrannosaurus-rex-new": {
+        "type": "product-template-tyrannosaurus-rex-new",
+        "settings": {
+          "buy_it_now_action": "direct_to_cart",
+          "gift_age": "3+",
+          "gift_text": "A great gift for a child!",
+          "banner_first_bg": "shopify:\/\/shop_images\/tiranozavr-01_e2f4506b-345d-4f8b-af0b-fb734d9c4d07.png",
+          "number_first_bg": "shopify:\/\/shop_images\/sidebar-numbers-1_2f5a0e41-b2be-4bed-8a24-e92386611569.png",
+          "number_first_date": "1",
+          "number_first_text": "Get the whole family together and have a fun time",
+          "number_second_bg": "shopify:\/\/shop_images\/sidebar-numbers-2_f3ee1c2f-a40d-4ccd-b541-f5746c4d8b71.png",
+          "number_second_date": "2",
+          "number_second_text": "Develop fine motor skills of hands, logic and thinking",
+          "number_third_bg": "shopify:\/\/shop_images\/sidebar-numbers-3_8a7520fa-28f6-4418-a53f-28975de8279e.png",
+          "number_third_date": "3",
+          "number_third_text": "Clean your mind puting together fanciful shapes",
+          "number_third_icon": "shopify:\/\/shop_images\/sidebar-numbers-3-icon.png",
+          "number_fourth_bg": "shopify:\/\/shop_images\/sidebar-numbers-4_2506271c-deb4-40c3-b624-bbff303ec691.png",
+          "number_fourth_date": "4",
+          "number_fourth_text": "Learn about animal diversity throughout history",
+          "number_fourth_icon": "shopify:\/\/shop_images\/sidebar-numbers-4-icon.png",
+          "banner_second_bg": "shopify:\/\/shop_images\/tiranozavr-02.png",
+          "surprise_title": "A surprise in every set",
+          "surprise_desc": "Get an extra gift and assemble your 3D dinosaur model",
+          "mounting_bg": "shopify:\/\/shop_images\/sidebar-numbers-31.png",
+          "mounting_icon": "shopify:\/\/shop_images\/icon1-tiranozavr_7bb4568b-ddf5-4d9c-a819-f05e753ad9d5.png",
+          "mounting_title": "Mounting system in each puzzle set",
+          "mounting_desc": "Fix the assembled puzzle on the wall in the child's room.",
+          "dinoframe_bg": "shopify:\/\/shop_images\/dino-frame_a3d6f37c-a6f6-4e1b-98c5-80ecec0991e8.png",
+          "dinoframe_icon": "shopify:\/\/shop_images\/icon2-tiranozavr_0e588970-0e23-4d84-a858-869696a606f9.png",
+          "dinoframe_title": "An outer frame and handy ruler in a set.",
+          "dinoframe_text": "Collect a picture easier.",
+          "habitat_title": "Every dinosaur is in its own habitat.",
+          "habitat_bg_first": "shopify:\/\/shop_images\/habitat-bg-1.png",
+          "habitat_icon_first": "shopify:\/\/shop_images\/habitat-img1.png",
+          "habitat_label_first": "Coming soon",
+          "habitat_name_first": "Stegosaurus",
+          "habitat_bg_second": "shopify:\/\/shop_images\/habitat-bg-2.png",
+          "habitat_icon_second": "shopify:\/\/shop_images\/habitat-img2.png",
+          "habitat_label_second": "Coming soon",
+          "habitat_name_second": "Pterodactyl",
+          "habitat_bg_third": "shopify:\/\/shop_images\/habitat-bg-3.png",
+          "habitat_icon_third": "shopify:\/\/shop_images\/habitat-img3.png",
+          "habitat_label_third": "Coming soon",
+          "habitat_name_third": "Plesiosaurus",
+          "habitat_bg_fourth": "shopify:\/\/shop_images\/habitat-bg-4.png",
+          "habitat_icon_fourth": "shopify:\/\/shop_images\/habitat-img4.png",
+          "habitat_label_fourth": "Coming soon",
+          "habitat_name_fourth": "Triceratops",
+          "habitat_bg_fifth": "shopify:\/\/shop_images\/habitat-bg-5.png",
+          "habitat_icon_fifth": "shopify:\/\/shop_images\/habitat-img5.png",
+          "habitat_icon_sidebar": "shopify:\/\/shop_images\/sidebar-numbers-3-icon.png",
+          "habitat_label_fifth": "Coming soon",
+          "habitat_name_fifth": "Tyrannosaurus",
+          "dinopazzle_bg": "shopify:\/\/shop_images\/dino-pazzle_cb0f11bb-dbbd-429b-813a-bff6e017a6b2.png",
+          "dinopazzle_icon": "shopify:\/\/shop_images\/icon30-tiranozavr_e983349b-19d9-40c0-97c0-a6b541e15652.png",
+          "dinopazzle_title": "Our puzzles are made of wood.",
+          "dinopazzle_text": "We care about your health.",
+          "show_cart_drawer": false,
+          "show_saved_amount": true,
+          "enable_default_variant": false,
+          "show_quantity_selector": false,
+          "show_vendor": false,
+          "enable_zoom": true,
+          "shake_effect_enable": true,
+          "readmore_enable": false,
+          "enable_progressbar_text": true,
+          "enable_shipping": false,
+          "show_tags": false,
+          "show_social": false,
+          "enable_payment_button": false,
+          "product_review": true,
+          "visitor_counter_enable": false,
+          "visitor_counter_number": "1-15",
+          "delivery_time_number": "1-3",
+          "product_description": "under_the_price",
+          "enable_sticky": true,
+          "enable_mobile_atc_button": false,
+          "move_badges_under_cart": false,
+          "enable_trust_badges": false,
+          "pdp_enable": false,
+          "pdp_enable_banner": false,
+          "pdp_title": "",
+          "pdp_sub_title": ""
+        }
+      },
+      "product-template-triceratops-new": {
+        "type": "product-template-triceratops-new",
+        "settings": {
+          "buy_it_now_action": "direct_to_cart",
+          "gift_age": "3+",
+          "gift_text": "A great gift for a child!",
+          "banner_first_bg": "shopify:\/\/shop_images\/triceratops-01.jpg",
+          "number_first_bg": "shopify:\/\/shop_images\/sidebar-numbers-11.png",
+          "number_first_date": "1",
+          "number_first_text": "Get the whole family together and have a fun time",
+          "number_second_bg": "shopify:\/\/shop_images\/sidebar-numbers-2_3a673d6b-fcd8-40da-8e02-49f871190825.png",
+          "number_second_date": "2",
+          "number_second_text": "Develop fine motor skills of hands, logic and thinking",
+          "number_third_bg": "shopify:\/\/shop_images\/sidebar-numbers-3_96cb63a0-e835-4fbd-82fc-7006bd69d829.png",
+          "number_third_date": "3",
+          "number_third_text": "Clean your mind puting together fanciful shapes",
+          "number_third_icon": "shopify:\/\/shop_images\/sidebar-numbers-3-icon.png",
+          "number_fourth_bg": "shopify:\/\/shop_images\/sidebar-numbers-4_573c97d4-d99d-46a5-ba29-1278df3fe799.png",
+          "number_fourth_date": "4",
+          "number_fourth_text": "Learn about animal diversity throughout history",
+          "number_fourth_icon": "shopify:\/\/shop_images\/sidebar-numbers-4-icon.png",
+          "banner_second_bg": "shopify:\/\/shop_images\/triceratops-06.jpg",
+          "surprise_title": "A surprise in every set",
+          "surprise_desc": "Get an extra gift and assemble your 3D dinosaur model",
+          "mounting_bg": "shopify:\/\/shop_images\/sidebar-numbers-31_52248591-6452-41c7-9010-9ae579675f9c.png",
+          "mounting_icon": "shopify:\/\/shop_images\/icon1-triceratops_46e34cee-2a8e-43a1-8a84-a117da87e9ad.png",
+          "mounting_title": "Mounting system in each puzzle set",
+          "mounting_desc": "Fix the assembled puzzle on the wall in the child's room.",
+          "dinoframe_bg": "shopify:\/\/shop_images\/dino-frame_c82ef3e5-2f7c-4e18-9897-ef150a2a42f7.png",
+          "dinoframe_icon": "shopify:\/\/shop_images\/icon02-triceratops_3ec5df37-4591-4150-8435-cf37bed462ca.png",
+          "dinoframe_title": "An outer frame and handy ruler in a set.",
+          "dinoframe_text": "Collect a picture easier.",
+          "habitat_title": "Every dinosaur is in its own habitat.",
+          "habitat_bg_first": "shopify:\/\/shop_images\/habitat-bg-1.png",
+          "habitat_icon_first": "shopify:\/\/shop_images\/habitat-img1.png",
+          "habitat_label_first": "Coming soon",
+          "habitat_name_first": "Stegosaurus",
+          "habitat_bg_second": "shopify:\/\/shop_images\/habitat-bg-2.png",
+          "habitat_icon_second": "shopify:\/\/shop_images\/habitat-img2.png",
+          "habitat_label_second": "Coming soon",
+          "habitat_name_second": "Pterodactyl",
+          "habitat_bg_third": "shopify:\/\/shop_images\/habitat-bg-3.png",
+          "habitat_icon_third": "shopify:\/\/shop_images\/habitat-img3.png",
+          "habitat_label_third": "Coming soon",
+          "habitat_name_third": "Plesiosaurus",
+          "habitat_bg_fourth": "shopify:\/\/shop_images\/habitat-bg-4.png",
+          "habitat_icon_fourth": "shopify:\/\/shop_images\/habitat-img4.png",
+          "habitat_label_fourth": "Coming soon",
+          "habitat_name_fourth": "Triceratops",
+          "habitat_bg_fifth": "shopify:\/\/shop_images\/habitat-bg-5.png",
+          "habitat_icon_fifth": "shopify:\/\/shop_images\/habitat-img5.png",
+          "habitat_icon_sidebar": "shopify:\/\/shop_images\/sidebar-numbers-3-icon.png",
+          "habitat_label_fifth": "Coming soon",
+          "habitat_name_fifth": "Tyrannosaurus",
+          "dinopazzle_bg": "shopify:\/\/shop_images\/dino-pazzle_bbdaa339-2e93-4d97-8df4-6053cdeea6ed.png",
+          "dinopazzle_icon": "shopify:\/\/shop_images\/icon3-triceratops.png",
+          "dinopazzle_title": "Our puzzles are made of wood.",
+          "dinopazzle_text": "We care about your health.",
+          "show_cart_drawer": false,
+          "show_saved_amount": true,
+          "enable_default_variant": false,
+          "show_quantity_selector": false,
+          "show_vendor": false,
+          "enable_zoom": true,
+          "shake_effect_enable": true,
+          "readmore_enable": false,
+          "enable_progressbar_text": true,
+          "enable_shipping": false,
+          "show_tags": false,
+          "show_social": false,
+          "enable_payment_button": false,
+          "product_review": true,
+          "visitor_counter_enable": false,
+          "visitor_counter_number": "1-15",
+          "delivery_time_number": "1-3",
+          "product_description": "under_the_price",
+          "enable_sticky": true,
+          "enable_mobile_atc_button": false,
+          "move_badges_under_cart": false,
+          "enable_trust_badges": false,
+          "pdp_enable": false,
+          "pdp_enable_banner": false,
+          "pdp_title": "",
+          "pdp_sub_title": ""
         }
       }
     },
